Add deps for heroku DB and procfile

--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,8 @@ altair = "*"
 jupyterlab = "*"
 dj-database-url = "*"
 django-extensions = "*"
+"psycopg2" = "*"
+gunicorn = "*"
 
 [dev-packages]
 ipdb = "*"
